gen/26.1/rpk/rpk-shadow-status.adoc
= rpk shadow status
:description: rpk shadow status

Get the status of a Redpanda Shadow Link.

This command shows the current status of a Shadow Link, including the overall
state, task statuses, and per-topic replication progress. Use this command to
monitor replication health and track how closely shadow topics follow the source
cluster.

By default, the command displays all status sections. Use the flags to display
specific sections such as overview, task status, or topic status. When using
this command with the --format json/yaml flag, we default to all sections.

== Usage

[,bash]
----
rpk shadow status [LINK_NAME] [flags]

Examples:

Display the status of a Shadow Link:
  rpk shadow status my-shadow-link

Display specific sections:
  rpk shadow status my-shadow-link --print-overview --print-topic
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|-h, --help |- |Help for status.

|-a, --print-all |- |Print all sections.

|-o, --print-overview |- |Print the overview section.

|-k, --print-task |- |Print the task status section.

|-t, --print-topic |- |Print the detailed topic status section.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===